[gd_scene load_steps=7 format=3 uid="uid://5vaxp8f2v58"]

[ext_resource type="Texture2D" uid="uid://r2miduqpobqa" path="res://icon.svg" id="1_37kl0"]
[ext_resource type="Script" uid="uid://g6ansirxuk2" path="res://main.gd" id="1_ppyta"]
[ext_resource type="Script" uid="uid://dth768skbff1a" path="res://character_body_2d.gd" id="2_8uh7m"]
[ext_resource type="PackedScene" uid="uid://dcptlsjjhh678" path="res://HUD.tscn" id="3_6uqi0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8uh7m"]
size = Vector2(128, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6uqi0"]
size = Vector2(20, 28)

[node name="Node" type="Node"]
script = ExtResource("1_ppyta")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(965, 610)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
scale = Vector2(3.80001, 1)
shape = SubResource("RectangleShape2D_8uh7m")

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(-2.70605e-05, 0)
scale = Vector2(3.80001, 1)
texture = ExtResource("1_37kl0")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(965, 513)
floor_constant_speed = true
safe_margin = 0.3
script = ExtResource("2_8uh7m")

[node name="CharSprite" type="Sprite2D" parent="CharacterBody2D"]
scale = Vector2(0.15625, 0.21875)
texture = ExtResource("1_37kl0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("RectangleShape2D_6uqi0")

[node name="timeslowTimer" type="Timer" parent="CharacterBody2D"]
wait_time = 5.0
one_shot = true
ignore_time_scale = true

[node name="timeslowRecovery" type="Timer" parent="CharacterBody2D"]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="HUD" parent="Camera2D" instance=ExtResource("3_6uqi0")]
follow_viewport_enabled = true

[connection signal="timeslow_tick" from="CharacterBody2D" to="Camera2D/HUD" method="_on_player_timeslow_tick"]
[connection signal="timeout" from="CharacterBody2D/timeslowTimer" to="CharacterBody2D" method="_on_timeslowTimeout"]
[connection signal="timeout" from="CharacterBody2D/timeslowRecovery" to="CharacterBody2D" method="_on_timeslowRecovery"]
